# mfa

./: .gitignore  LICENSE  Pipfile  README.md  main.py  mypy.ini  requirements-dev.txt  requirements.txt  setup.cfg  validation.sh
example/: demo.yml
mfa/: __init__.py  main.py  version.py
test/: example.yml
tests/: example.yml
