[metadata]
name = MFA
version = attr: mfa.version.__version__
description = Tool to do Multi-Factor Authentication (MFA) in CLI.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
keywords = MFA,Multi-Factor,Authentication
url = https://github.com/tkibe/mfa
